# Slowboost

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Slowboost.code-workspace  run.sh  test.sh
Slowboost/: CMakeLists.txt
Slowboost/include/: Gradients.hpp  Graph.hpp  Logger.hpp  Node.hpp  Operation.hpp  Placeholder.hpp  Session.hpp  Variable.hpp  common.hpp  random.hpp  types.hpp
Slowboost/include/ops/: Add.hpp  Hadamard.hpp  LeakyRelu.hpp  Log.hpp  MatrixMultiply.hpp  Negative.hpp  ReduceSum.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp
Slowboost/include/optimizers/: GradientDescentOptimizer.hpp
Slowboost/include/util/: CSVImport.hpp  Enumerate.hpp  MatrixIO.hpp  Stopwatch.hpp
Slowboost/src/: Gradients.cpp  Graph.cpp  Logger.cpp  Node.cpp  Operation.cpp  Placeholder.cpp  Session.cpp  Variable.cpp  common.cpp  random.cpp
Slowboost/src/ops/: Add.cpp  Hadamard.cpp  LeakyRelu.cpp  Log.cpp  MatrixMultiply.cpp  Negative.cpp  ReduceSum.cpp  Sigmoid.cpp  Softmax.cpp  Tanh.cpp
Slowboost/src/optimizers/: GradientDescentOptimizer.cpp
Slowboost/src/util/: MatrixIO.cpp
SlowboostDemo/: CMakeLists.txt  demo.cpp  demo.h
SlowboostTests/: CMakeLists.txt  glorot_test.cpp  helpers.hpp  softmax_test.cpp  test_main.cpp
SlowboostTests/mocks/: test.csv  test_correct_axis_one.csv
comp_graph/include/: Graph.hpp  Node.hpp  Operation.hpp  Placeholder.hpp  Session.hpp  Variable.hpp  common.hpp  types.hpp
comp_graph/include/ops/: Add.hpp  MatrixMultiply.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp
comp_graph/include/util/: Stopwatch.hpp
comp_graph/src/: Graph.cpp  Node.cpp  Operation.cpp  Session.cpp  Variable.cpp  main.cpp
comp_graph/src/ops/: Add.cpp  MatrixMultiply.cpp  Sigmoid.cpp  Softmax.cpp  Tanh.cpp
lib/: CMakeLists.txt
scripts/: lint-and-format.sh
tests/: CMakeLists.txt  glorot_test.cpp  helpers.hpp  reduction_test.cpp  softmax_test.cpp  test_main.cpp
